# Junk-Drawer

./: LICENSE  README.md  nw-eps-stub.patch
funsies/: README.md  big-snake.patch
funsies/sib/: Makefile  binfmt_sib  sib.c  test.sib
javascript/: README.md
javascript/duktape-engine/: .gitignore  CMakeLists.txt  README.md  download-duktape.sh  download-es6-deps.sh
javascript/duktape-engine/polyfill/: package.json
javascript/duktape-engine/src/: console.c  console.h  eventloop.c  eventloop.h  log.c  log.h  main.c  window.c  window.h  xmlhttprequest.c  xmlhttprequest.h
javascript/quickjs-engine/: .gitignore  CMakeLists.txt  README.md  download-quickjs.sh
javascript/quickjs-engine/src/: console.c  console.h  eventloop.c  eventloop.h  lang.h  main.c  xmlhttprequest.c  xmlhttprequest.h
minecraft/: README.md
minecraft/mcpi-reborn-hacks/: README.md  creative.patch  speed.patch
minecraft/sound-extractor/: README.md  extract.cpp
nano/: README.md  better-browser.patch  blueless.patch  readonly-view.patch  relative-browser.patch  tab-align.patch
oddities/: README.md  burlap
oddities/insyde-h2o/: reader.c
